tests/error/struct_errors/mutate_classical.err
Error: Unsupported (at $FILE:14:6)
   | 
12 | def foo(s: MyStruct) -> tuple[MyStruct, bool]:
13 |     t = s
14 |     t.x += 1
   |       ^ Mutation of classical fields is not supported

Guppy compilation failed due to 1 previous error
